k8/01-basic-api/api-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicapi-v1
  labels:
    app: basicapi
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basicapi
      version: v1
  template:
    metadata:
      labels:
        app: basicapi
        version: v1
    spec:
      containers:
        - name: basicapi
          image: srghouse/basic-rest-api:1.0
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 9000
