k8/01-basic-api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicapiservice
  labels:
    app: basicapi
    service: basicapi
spec:
  ports:
    - port: 9000
      name: http
  selector:
    app: basicapi
