k8/01-basic-api/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: basicapi-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basicapi
spec:
  hosts:
    - "*"
  gateways:
    - basicapi-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: basicapiservice
            port:
              number: 9000
